--- a/templates/article.html
+++ b/templates/article.html
@@ -4,19 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <title>{{ article[1] }}</title>
-    <link rel="stylesheet" href="../static/css/github-markdown.css" type="text/css" />
+    <link rel="stylesheet" href="../static/css/github-markdown.css" type="text/css"/>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
 </head>
 <style>
-	.markdown-body {
-		box-sizing: border-box;
-		min-width: 200px;
-		max-width: 980px;
-		margin: 0 auto;
-		padding: 45px;
-	}
+    .markdown-body {
+        box-sizing: border-box;
+        min-width: 200px;
+        max-width: 980px;
+        margin: 0 auto;
+        padding: 45px;
+    }
 </style>
+<script>
+    function addToFav(id) {
+        $.ajax({
+            type: "put",
+            url: "http://localhost:5000/article/" + id,
+            success: function () {
+                alert("success")
+            }
+        })
+    }
+</script>
 <body>
+
 <article class="markdown-body">
+    <button onclick="addToFav({{ article[0] }})" type="button">加入收藏</button>
     {{ article[4]|safe }}
 </article>
 </body>
