--- a/templates/index.html
+++ b/templates/index.html
@@ -2,26 +2,55 @@
 <html lang='en'>
 <head>
     <title>My Webpage</title>
-    <script src="../static/js/jquery-3.2.1.min.js"></script>
-    <script src="../static/js/bootstrap.js"></script>
-    <link href="../static/css/bootstrap.css" rel="script" type="text/css">
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
 </head>
 <script>
     function deleteById(id) {
         $.ajax({
-            type:"delete",
-            url:"http://localhost:5000/delete/" + id,
+            type: "delete",
+            url: "http://localhost:5000/delete/" + id,
             success: function () {
                 location.reload(true)
+            },
+            error: function () {
+                alert("error")
             }
         })
     }
 </script>
 <body>
-    {% for var in values %}
-        <a href="http://localhost:5000/article/{{ var[0] }}">{{ var[1] }}</a>
-        <button onclick="deleteById({{ var[0] }})" type="button">delete</button>
-        <br>
-    {% endfor %}
+<div class="container">
+    <div class="row">
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>name</th>
+                <th>action</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for var in values %}
+                <tr>
+                    <td class="lead"><a href="http://localhost:5000/article/{{ var[0] }}">{{ var[1] }}</a></td>
+                    <td>
+                        <button onclick="deleteById({{ var[0] }})" type="button" class="btn btn-danger btn-sm">delete</button>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+
+    </div>
+</div>
 </body>
 </html>
