--- a/templates/fav.html
+++ b/templates/fav.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
-    <title>My Webpage</title>
+    <title>My Fav</title>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -32,19 +32,20 @@
             }
         })
     }
-    function addToFav(id) {
+    function removeFromFav(id) {
         $.ajax({
             type: "put",
-            url: "http://localhost:5000/article/addToFav/" + id,
+            url: "http://localhost:5000/article/removeFromFav/" + id,
             success: function () {
                 alert("success")
+                location.reload(true)
             }
         })
     }
 </script>
 <body>
 <div class="container">
-    <p class="lead"><a href="http://localhost:5000/fav">查看我的收藏</a></p>
+    <p class="lead"><a href="http://localhost:5000/index">查看所有</a></p>
     <div class="row">
         <table class="table table-striped table-hover">
             <thead>
@@ -58,13 +59,17 @@
                 <tr>
                     <td class="lead"><a href="http://localhost:5000/article/{{ var[0] }}">{{ var[1] }}</a></td>
                     <td>
-                        <button onclick="deleteById({{ var[0] }})" type="button" class="btn btn-danger btn-sm">delete</button>
-                        <button onclick="addToFav({{ var[0] }})" type="button" class="btn btn-info btn-sm">ToFav</button>
+                        <button onclick="deleteById({{ var[0] }})" type="button" class="btn btn-danger btn-sm">delete
+                        </button>
+                        <button onclick="removeFromFav({{ var[0] }})" type="button" class="btn btn-info btn-sm">
+                            removeFromFav
+                        </button>
                     </td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
+
     </div>
 </div>
 </body>
